--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <title>Page Title</title>
 </head>
 <body bgcolor="pink">
-
+<a href="/ElectiveAssign">Open Assignment 2 <a>
 <h1><center>University of the Immaculate Conception</center> </h1>
 
 <h1>What is Search Engine Optimization?</h1>
